# NNTrainingModel

./: CMakeLists.txt  README.md  main.c
include/: constants.h  neuralNetModels.h
lib/: neuralNetModels.c
